--- a/projects/1-mern-crash/package.json
+++ b/projects/1-mern-crash/package.json
@@ -16,7 +16,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "4.18.3",
     "mongoose": "^8.14.1"
   },
   "devDependencies": {
