--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "front": "cd projects/2-chat-app/frontend && pnpm dev",
+    "back": "cd projects/2-chat-app/backend && pnpm dev"
   },
   "keywords": [],
   "author": "",
