--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "front": "cd projects/2-chat-app/frontend && pnpm dev",
-    "back": "cd projects/2-chat-app/backend && pnpm dev"
+    "front1": "cd projects/1-mern-crash/frontend && pnpm dev",
+    "back1": "cd projects/1-mern-crash/backend && pnpm dev",
+    "front2": "cd projects/2-chat-app/frontend && pnpm dev",
+    "back2": "cd projects/2-chat-app/backend && pnpm dev"
   },
   "keywords": [],
   "author": "",
