--- a/projects/4-spotify-clone/frontend/package.json
+++ b/projects/4-spotify-clone/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,8 @@
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "2.5.2",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.30.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
