--- a/projects/4-spotify-clone/frontend/package.json
+++ b/projects/4-spotify-clone/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "2.5.2",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "4.8.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "5.0.4"
