--- a/projects/4-spotify-clone/frontend/package.json
+++ b/projects/4-spotify-clone/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.31.7",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
